--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dbf-reader": "^1.0.3",
+    "dbffile": "^1.12.0",
+    "formidable": "^3.5.2",
     "lucide-react": "^0.475.0",
     "next": "^15",
+    "node-dbf": "^0.4.0",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.3.6",
@@ -24,6 +28,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
