--- a/dockerfile-watcher
+++ b/dockerfile-watcher
@@ -7,3 +7,7 @@ WORKDIR /app
 # Copia os arquivos Python para o container
 COPY ./src_py ./src_py
 COPY ./prisma ./prisma
+
+COPY ./src_py/requirements.txt /app/requirements.txt
+
+RUN pip install --no-cache-dir -r /app/requirements.txt
