--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^2.2.0",
     "@prisma/client": "^6.4.1",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
@@ -22,6 +23,7 @@
     "formidable": "^3.5.2",
     "lucide-react": "^0.475.0",
     "next": "^15",
+    "next-themes": "^0.4.4",
     "node-dbf": "^0.4.0",
     "react": "^18",
     "react-dom": "^18",
